--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html{
+    -webkit-text-size-adjust: 100%;
+}
 body {
     padding: 0;
     margin: 0;
