--- a/src/app/content-info/content-info.component.scss
+++ b/src/app/content-info/content-info.component.scss
@@ -1,5 +1,7 @@
 #main-info{
-   
+    a{
+        text-decoration: none;
+    }
     grid-area: info;
     background-color: rgb(255, 255, 255);
     box-shadow: 1px 2px 2px rgb(240, 240, 240);
@@ -12,39 +14,11 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        #starnames{
-            width: 95%;
-            margin: auto;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            .star-profile{
-                
-                font-size: 13px;
-                width: 130px;
-                
-                p{
-                    position: relative;
-                    max-height: 1.2em;
-                    line-height: 1.2em;
-                    overflow: hidden;
-                    a{
-                        color:rgb(90, 90, 90);
-                    }
-                }
-                img{
-                    
-                    width: 50px;
-                    height: 50px;
-                    border-radius: 50%;
-                }
-            }
-        }
         #other-info{
-            
             width: 95%;
             margin: auto;
             font-size: 13px;
+            
             p{  
                 margin: 0;
                 word-wrap: break-word;
@@ -56,5 +30,50 @@
                 }
             }
         }
+        #starnames{
+            position: relative;
+            overflow-y: hidden;
+            
+            width: 95%;
+            border-style: solid;
+            border-color: rgb(200,200,200);
+            border-width: 0 0 1px 0;
+            margin: 5px auto 10px auto;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            .star-profile{
+                // [    [image]     ]
+                //   40px  50px  40px
+                // 130px
+                // height 5px + 50px + 10px + 1px = 66px + 28px 
+                font-size: 13px;
+                width: 130px;
+                p{
+                    text-align: center;
+                    max-height: 1.2em;
+                    line-height: 1.2em;
+                    overflow: hidden;
+                    a{
+                        color:rgb(90, 90, 90);
+                    }
+                }
+                img{
+                    padding: 0 40px 0 40px;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                }
+            }
+            #star-profile-dropdown{
+                position: absolute;
+                color: rgb(90, 90, 90);
+                font-size: 13px;
+                top: 10px;
+                right: 8px;
+            }
+        }
+        
     }
 }
