--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,7 +3,7 @@
     <iframe id="main-player" allowfullscreen [src]="safeUrl"  frameborder="0"></iframe>
     <!--</div>-->
     <app-content-info id="info" [content]="content"></app-content-info>
-    <app-side-content-list id="recommended-list" [content-list]="recommend_contents_list">
+    <app-side-content-list id="recommended-list" [content-list]="recommendContentsList">
 
     </app-side-content-list>
 </div>
