--- a/src/app/content-nav/content-nav.component.html
+++ b/src/app/content-nav/content-nav.component.html
@@ -1,18 +1,8 @@
 <div id="nav-top">
-    <div *ngIf="type !== 'list' && type !== 'search'" id="nav-type">
+    <div *ngIf="type_value" id="nav-type">
         <p><span>{{formatter.convertStarname(type_value)}}</span></p><p><span>Porn Videos</span></p>
     </div>
-    <div id="nav-sort">
-        <mat-form-field *ngIf="!disable_sort">
-            <mat-select placeholder="Sorted by" (selectionChange)="sortedBy($event)" [(ngModel)]="selectedSort">
-                <mat-option *ngFor="let sort of support_sorts" [value]="sort.value">
-                    {{ sort.viewValue }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
  
-    <mat-paginator id="nav-pagination" [hidePageSize]="true" [showFirstLastButtons]="true" [pageIndex]="pageNumber" [length]="total_num_items" [pageSize]="item_per_page" (page)="unpdatePage($event)">
-    </mat-paginator>
-        
+    <app-content-page-sort id="nav-sort" *ngIf="!disable_sort"></app-content-page-sort>
+    <app-content-page-nav id="nav-pagination" [item-per-page]='item_per_page'></app-content-page-nav>
 </div>
