--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
     padding: 0;
     background-color: black;
     height: 50px;
-    button{
+    a, button{
         color:white;
     }
     display: flex;
@@ -23,7 +23,7 @@
     justify-content: center;
     padding-bottom: 4px;
     box-shadow: 1px 2px 2px rgb(220,220,220);
-    button{
+    a{
         background-color: white;
         color:black;
         font-size: 13px;
