--- a/src/app/not-found-page/not-found-page.component.html
+++ b/src/app/not-found-page/not-found-page.component.html
@@ -1,3 +1,6 @@
-<p>
-  not-found-page works!
-</p>
+<div *ngIf="msg" class="content-container">
+  <div class="center">
+      <p>{{msg}} is not found!</p>
+      <!--<a mat-button routerLink="/">Go back to home</a>-->
+  </div>
+</div>
