--- a/src/app/content-nav/content-nav.component.html
+++ b/src/app/content-nav/content-nav.component.html
@@ -3,6 +3,6 @@
         <p><span>{{formatter.convertStarname(type_value)}}</span></p><p><span>Porn Videos</span></p>
     </div>
  
-    <app-content-page-sort id="nav-sort" *ngIf="!disable_sort"></app-content-page-sort>
+    <app-content-page-sort id="nav-sort"></app-content-page-sort>
     <app-content-page-nav id="nav-pagination" [item-per-page]='item_per_page'></app-content-page-nav>
 </div>
