--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,13 +12,29 @@
     a, button{
         color:white;
     }
+    .menu-btn{
+        display: none;
+    }
+    @media screen and (max-width: 1100px){
+        .nav-btn{
+            display: none;
+        }
+        .menu-btn{
+            display: block;
+        }
+    }
+    @media screen and (max-width: 500px){
+        .search-input{
+            display: none;
+        }
+    }
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
     align-items: center;
 }
 #hidden-block{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     padding-bottom: 4px;
@@ -28,15 +44,21 @@
         color:black;
         font-size: 13px;
     }
-   .search-input{
+    .search-input{
        padding-top: 3px;
        border-style: solid;
        border-width: 0 0 1px 0;
        width: 100%;
        align-self: center;
        font-size:12px;
-   }
+    }
+    @media screen and (min-width: 500px){
+        .search-input{
+            display: none;
+        }
+    }
 }
+
 .search-input{
     margin-right: 20px;
     input{
@@ -51,4 +73,7 @@
         outline: none;
         border:0;
     }
+}
+.user-button{
+    width: 150px;
 }
